--- a/friends/src/App.css
+++ b/friends/src/App.css
@@ -32,9 +32,9 @@
   }
 }
 
-/*mein*/
 
-/* .list {
+
+ .list {
   width: 80%;
   margin: 30px auto;
   display: flex;
@@ -163,4 +163,4 @@
   padding: 5px;
   border: 1px solid blue;
   border-radius: 96px;
-} */
+} 
